--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^5.0.0
   get_it: ^7.2.0
   font_awesome_flutter: ^9.1.0
+  change_app_package_name: ^0.1.3
 
 dev_dependencies:
   flutter_test:
